- deleteUser added to user-list.component.ts - delete-button layout & design in user-list.component.scss - delete-button added to list items in user list - user.model.ts added : corresponds to User-entity in backend

--- a/simple-angular-app-v2/src/app/user-list/user-list.component.html
+++ b/simple-angular-app-v2/src/app/user-list/user-list.component.html
@@ -8,6 +8,7 @@
       <li *ngFor="let user of users">
         <!-- Display the user's name and email -->
         {{ user.name }} - {{ user.email }}
+        <button type="button" class="delete-btn" (click)="deleteUser(user)">Delete</button>
       </li>
     </ul>
     <ng-template #noUsers>
